--- a/Deep_Learning_Sentiment_Analysis_BERT_&_Groq.ipynb
+++ b/Deep_Learning_Sentiment_Analysis_BERT_&_Groq.ipynb
@@ -537,7 +537,7 @@
         "    # print(response)\n",
         "    return response\n",
         "\n",
-        "os.environ[\"GROQ_API_KEY\"] = \"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\"\n",
+        "os.environ[\"GROQ_API_KEY\"] = \"***removed***\"\n",
         "\n",
         "client = Groq(\n",
         "    api_key=os.environ.get(\"GROQ_API_KEY\"),\n",
